namespaces/live.cloud-platform.service.justice.gov.uk/laa-smtp-mock-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-smtp-mock-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-sre-engineers"
    cloud-platform.justice.gov.uk/application: "dummy smtp4 server setup"
    cloud-platform.justice.gov.uk/owner: "laa-sre-engineers: arunnirmal.chinnadurai@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-smtp-mock"
    cloud-platform.justice.gov.uk/team-name: "laa-sre-admins"
    cloud-platform.justice.gov.uk/review-after: "2025-06-06"
