namespaces/live.cloud-platform.service.justice.gov.uk/laa-smtp-mock-dev/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-smtp-mock-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-smtp-mock-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mailhog-ingress
  namespace: laa-smtp-mock-dev
spec:
  rules:
    - host: mailhog.laa-smtp-mock-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog-service
                port:
                  number: 8025
